force-app/main/default/objects/ResourceAbsenceEvent__e/ResourceAbsenceEvent__e.object-meta.xml
<CustomObject>
    <label>Resource Absence Event</label>
    <pluralLabel>Resource Absence Events</pluralLabel>
</CustomObject>