force-app/main/default/objects/ResourceAbsenceEvent__e/fields/BLN_EndTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>