force-app/main/default/objects/ResourceAbsenceEvent__e/fields/BLN_StartTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>