force-app/main/default/objects/ResourceAbsenceEvent__e/fields/ResourceId__c.field-meta.xml
<CustomField>
    <fullName>ResourceId__c</fullName>
    <label>ResourceId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>